--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,8 @@
 
       </ul>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" placeholder="Title" aria-label="Search" name="search_item">
+        <input class="form-control me-2" type="search" placeholder="Location" aria-label="Search" name="search_item">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
