--- a/core/templates/events/event_detail.html
+++ b/core/templates/events/event_detail.html
@@ -14,6 +14,22 @@
     <h5 class="card-title">{{ event.title }}</h5>
     <p class="card-text">{{ event.description }}</p>
     <a href="{% url 'event_list' %}" class="btn btn-primary">Go Back</a>
+
+<!--    {% if user.is_authenticated and perms.core.delete_event %}-->
+<!--    <form action="{% url 'delete_event' event.id %}" method="post">-->
+<!--      {% csrf_token %}-->
+<!--      <button class="btn btn-danger">Delete</button>-->
+<!--    </form>-->
+<!--    {% endif %}-->
+
+    {% if user.is_authenticated and perms.core.change_event %}
+      <a href="{% url 'change_event' event.id%}" class="btn btn-warning">Edit</a>
+    {% endif %}
+
+    {% if user.is_authenticated and perms.core.delete_event %}
+      <a href="{% url 'delete_event' event.id%}" class="btn btn-danger">Delete</a>
+    {% endif %}
+
   </div>
   <div class="card-footer text-body-secondary">
     {{ event.create_date }}
