--- a/core/templates/events/event_detail.html
+++ b/core/templates/events/event_detail.html
@@ -1,39 +1,33 @@
 {% extends 'base.html' %}
 
-{% block title %} Detailed Event {% endblock %}
+{% block title %} {{event.title}} {% endblock %}
 
-{% load crispy_forms_tags %}
+{% load static %}
 
 {% block content %}
 
-<div class="card text-center">
-  <div class="card-header">
-    Featured
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">{{ event.title }}</h5>
-    <p class="card-text">{{ event.description }}</p>
-    <a href="{% url 'event_list' %}" class="btn btn-primary">Go Back</a>
+<link rel="stylesheet" href="{% static 'core/css/event_detail.css' %}">
 
-<!--    {% if user.is_authenticated and perms.core.delete_event %}-->
-<!--    <form action="{% url 'delete_event' event.id %}" method="post">-->
-<!--      {% csrf_token %}-->
-<!--      <button class="btn btn-danger">Delete</button>-->
-<!--    </form>-->
-<!--    {% endif %}-->
+<div class="main-container">
 
-    {% if user.is_authenticated and perms.core.change_event %}
-      <a href="{% url 'change_event' event.id%}" class="btn btn-warning">Edit</a>
+    {% if event.images.first %}
+        <img src="{{ event.images.first.image.url }}" class="card-img-top" alt="...">
+    {% else %}
+        <img src="https://www.adweek.com/wp-content/uploads/files/gunsroses-hed-2016.png?w=652" class="card-img-top"
+             alt="...">
     {% endif %}
 
-    {% if user.is_authenticated and perms.core.delete_event %}
-      <a href="{% url 'delete_event' event.id%}" class="btn btn-danger">Delete</a>
-    {% endif %}
+    <div class="event-informations">
+        <h5 class="card-title">{{ event.title }}</h5>
+        <p class="card-text"><b>Description:</b> {{ event.description }}</p>
+        <p class="card-text"><b>Location:</b> {{ event.location }}</p>
+        <p class="card-text"><b>Start Time:</b> {{ event.start_time }}</p>
+        <p class="card-text"><b>Category:</b> {{ event.category }}</p>
 
-  </div>
-  <div class="card-footer text-body-secondary">
-    {{ event.create_date }}
-  </div>
+        <a href="{% url 'event_list' %}" class="btn btn-danger">Cancel</a>
+        <a href="{% url 'buy_ticket' event.id %}" class="btn btn-primary">Buy Ticket</a>
+    </div>
+
 </div>
 
 {% endblock %}
