--- a/authentication/templates/registration/login.html
+++ b/authentication/templates/registration/login.html
@@ -13,7 +13,7 @@
     {{ form|crispy }}
 
     <button type="submit" class="btn btn-success">Login</button>
-    <a href="{% url 'event_list' %}" class="btn btn-danger">Cancel</a>
+    <a href="{% url 'core:event_list' %}" class="btn btn-danger">Cancel</a>
 
   </form>
 
