--- a/core/templates/events/paginator.html
+++ b/core/templates/events/paginator.html
@@ -1,12 +1,12 @@
 <nav aria-label="...">
     <ul class="pagination">
 
-        {% if events.has_previous %}
+        {% if page_obj.has_previous %}
         <li class="page-item">
             <a class="page-link" href="?page=1">&laquo; First</a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="?page={{ events.previous_page_number }}">Previous</a>
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -14,13 +14,13 @@
         </li>
         {% endif %}
 
-        {% for num in events.paginator.page_range %}
-            {% if events.number == num %}
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
                 <li class="page-item active" aria-current="page">
                     <span class="page-link">{{ num }}</span>
                 </li>
 
-            {% elif num > events.number|add:-3 and num < events.number|add:3 %}
+            {% elif num > page_obj.number|add:-3 and num < page_obj.number|add:3 %}
                 <li class="page-item"><a class="page-link" href="?page={{num}}">{{ num }}</a></li>
             {% endif %}
 
@@ -33,12 +33,12 @@
 <!--        <li class="page-item"><a class="page-link" href="#">3</a></li>-->
 
 
-        {% if events.has_next %}
+        {% if page_obj.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ events.next_page_number }}">Next</a>
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="?page={{ events.paginator.num_pages }}">Last &raquo;</a>
+            <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
         </li>
         {% else %}
         <li class="page-item disabled">
